--- a/index.html
+++ b/index.html
@@ -1,37 +1,94 @@
-<!-- Add to <head> -->
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hotel Feedback Form</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f7f8;
+      margin: 0;
+      padding: 20px;
+    }
+    form {
+      background: #ffffff;
+      padding: 25px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      margin: auto;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #333;
+    }
+    label {
+      font-weight: bold;
+      margin-top: 10px;
+      display: block;
+    }
+    input[type="text"],
+    input[type="email"],
+    textarea,
+    select {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+    textarea {
+      resize: vertical;
+    }
+    input[type="submit"] {
+      background-color: #0070d2;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 16px;
+      width: 100%;
+    }
+    input[type="submit"]:hover {
+      background-color: #005fb2;
+    }
+  </style>
+</head>
+<body>
 
-<!-- Web-to-Case Form -->
-<form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00DgK000002Jt9K" method="POST" style="max-width: 500px; margin: auto; font-family: Arial, sans-serif;">
+  <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00DgK000002Jt9K" method="POST">
+    <h2>Hotel Feedback Form</h2>
 
-  <!-- Hidden Fields -->
-  <input type="hidden" name="orgid" value="00DgK000002Jt9K">
-  <input type="hidden" name="retURL" value="http://google.com">
-  <!-- Optional: Debugging -->
-  <!--
-  <input type="hidden" name="debug" value="1">
-  <input type="hidden" name="debugEmail" value="raptbot.dev.sharma@outlook.com">
-  -->
+    <input type="hidden" name="orgid" value="00DgK000002Jt9K">
+    <input type="hidden" name="retURL" value="http://google.com">
 
-  <h2>Contact Support</h2>
+    <!-- Booking ID -->
+    <label for="00NgK000012FaeD">Booking ID</label>
+    <input id="00NgK000012FaeD" name="00NgK000012FaeD" type="text" maxlength="10" required>
 
-  <!-- Email -->
-  <label for="email"><strong>Email</strong></label><br>
-  <input type="email" id="email" name="email" maxlength="80" required style="width: 100%; padding: 8px; margin-bottom: 10px;"><br>
+    <!-- Email -->
+    <label for="email">Email</label>
+    <input id="email" name="email" type="email" maxlength="80" required>
 
-  <!-- Phone -->
-  <label for="phone"><strong>Phone</strong></label><br>
-  <input type="tel" id="phone" name="phone" maxlength="40" style="width: 100%; padding: 8px; margin-bottom: 10px;"><br>
+    <!-- Feedback -->
+    <label for="00NgK000012DftW">Feedback</label>
+    <textarea id="00NgK000012DftW" name="00NgK000012DftW" rows="4" required></textarea>
 
-  <!-- Subject -->
-  <label for="subject"><strong>Subject</strong></label><br>
-  <input type="text" id="subject" name="subject" maxlength="80" required style="width: 100%; padding: 8px; margin-bottom: 10px;"><br>
+    <!-- Rating -->
+    <label for="00NgK000012FaG1">Service Rating</label>
+    <select id="00NgK000012FaG1" name="00NgK000012FaG1" required>
+      <option value="">-- Select --</option>
+      <option value="Improve">Improve</option>
+      <option value="Good">Good</option>
+      <option value="Excellent">Excellent</option>
+    </select>
 
-  <!-- Description -->
-  <label for="description"><strong>Description</strong></label><br>
-  <textarea id="description" name="description" rows="5" required style="width: 100%; padding: 8px; margin-bottom: 15px;"></textarea><br>
+    <input type="submit" value="Submit Feedback">
+  </form>
 
-  <!-- Submit -->
-  <input type="submit" value="Submit Case" style="padding: 10px 20px; background-color: #0070d2; color: #fff; border: none; border-radius: 4px; cursor: pointer;">
-
-</form>
+</body>
+</html>
