--- a/index.html
+++ b/index.html
@@ -5,56 +5,71 @@
   <title>Hotel Feedback Form</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f7f8;
       margin: 0;
-      padding: 20px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #e0eafc, #cfdef3);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
+
     form {
       background: #ffffff;
-      padding: 25px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
       max-width: 500px;
-      margin: auto;
+      width: 90%;
     }
+
     h2 {
       text-align: center;
       margin-bottom: 20px;
       color: #333;
     }
+
     label {
-      font-weight: bold;
-      margin-top: 10px;
+      font-weight: 600;
       display: block;
+      margin-bottom: 5px;
+      margin-top: 15px;
+      color: #444;
     }
+
     input[type="text"],
     input[type="email"],
     textarea,
     select {
       width: 100%;
       padding: 10px;
-      margin-top: 5px;
-      margin-bottom: 15px;
+      margin-top: 3px;
       border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 14px;
+      border-radius: 8px;
+      font-size: 15px;
+      background: #f9f9f9;
+      box-sizing: border-box;
     }
+
     textarea {
       resize: vertical;
     }
+
     input[type="submit"] {
       background-color: #0070d2;
       color: white;
-      padding: 12px 20px;
+      padding: 12px;
       border: none;
-      border-radius: 6px;
-      cursor: pointer;
+      border-radius: 8px;
       font-size: 16px;
+      margin-top: 20px;
+      cursor: pointer;
       width: 100%;
+      transition: background-color 0.3s ease;
     }
+
     input[type="submit"]:hover {
-      background-color: #005fb2;
+      background-color: #005bb5;
     }
   </style>
 </head>
@@ -66,19 +81,15 @@
     <input type="hidden" name="orgid" value="00DgK000002Jt9K">
     <input type="hidden" name="retURL" value="http://google.com">
 
-    <!-- Booking ID -->
     <label for="00NgK000012FaeD">Booking ID</label>
     <input id="00NgK000012FaeD" name="00NgK000012FaeD" type="text" maxlength="10" required>
 
-    <!-- Email -->
     <label for="email">Email</label>
     <input id="email" name="email" type="email" maxlength="80" required>
 
-    <!-- Feedback -->
     <label for="00NgK000012DftW">Feedback</label>
     <textarea id="00NgK000012DftW" name="00NgK000012DftW" rows="4" required></textarea>
 
-    <!-- Rating -->
     <label for="00NgK000012FaG1">Service Rating</label>
     <select id="00NgK000012FaG1" name="00NgK000012FaG1" required>
       <option value="">-- Select --</option>
