--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #e0eafc, #cfdef3);
+      background: url('https://i.ibb.co/0VVFj25H/bc7283b4bcf2af51a9053578f2910dd0-1.jpg') no-repeat center center fixed; background-size: cover;"
       min-height: 100vh;
       display: flex;
       align-items: center;
@@ -15,7 +15,7 @@
     }
 
     form {
-      background: #ffffff;
+      
       padding: 30px;
       border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
@@ -26,7 +26,8 @@
     h2 {
       text-align: center;
       margin-bottom: 20px;
-      color: #333;
+      color: #d4af37;
+      
     }
 
     label {
@@ -34,7 +35,7 @@
       display: block;
       margin-bottom: 5px;
       margin-top: 15px;
-      color: #444;
+     color: #d4af37;
     }
 
     input[type="text"],
@@ -42,12 +43,13 @@
     textarea,
     select {
       width: 100%;
+      background: transparent;
       padding: 10px;
       margin-top: 3px;
-      border: 1px solid #ccc;
+      border: 1px solid #d4af37;
       border-radius: 8px;
       font-size: 15px;
-      background: #f9f9f9;
+      color: #f1f1f1;
       box-sizing: border-box;
     }
 
@@ -56,7 +58,7 @@
     }
 
     input[type="submit"] {
-      background-color: #0070d2;
+      background-color: #d4af37;
       color: white;
       padding: 12px;
       border: none;
@@ -69,7 +71,7 @@
     }
 
     input[type="submit"]:hover {
-      background-color: #005bb5;
+     background-color: #d4af70;
     }
   </style>
 </head>
