--- a/Web_to_case.html
+++ b/Web_to_case.html
@@ -13,7 +13,7 @@
 <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00DgK000002Jt9K" method="POST">
 
 <input type=hidden name="orgid" value="00DgK000002Jt9K">
-<input type=hidden name="retURL" value="https://www.google.com/">
+<input type=hidden name="retURL" value="http://google.com">
 
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
@@ -32,11 +32,6 @@
 <label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
 
 <label for="description">Description</label><textarea name="description"></textarea><br>
-
-<label for="priority">Priority</label><select  id="priority" name="priority"><option value="">--None--</option><option value="High">High</option>
-<option value="Medium">Medium</option>
-<option value="Low">Low</option>
-</select><br>
 
 <input type="submit" name="submit">
 
